Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34428

main.winservice_basic fails with [Warning] Could not remove temporary table: '<path>', error: 2

    XMLWordPrintable

Details

    Description

      According to cross-reference happens every couple of days on new buildbot

      Example

      CURRENT_TEST: main.winservice_basic
      mysqltest: In included file "C:/Buildbot/amd64-windows/build/mysql-test/main/winservice.inc": 
      included from C:/Buildbot/amd64-windows/build/mysql-test/main/winservice_basic.test at line 5:
      At line 24: exec of 'C:/Buildbot/amd64-windows/build/sql/Debug/mariadb-install-db.exe --datadir=C:/Buildbot/amd64-windows/build/mysql-test/var/22/tmp/data --port=19630 --password=password --service=mariadb19630 --verbose-bootstrap -R 2>&1' failed, error: 1, status: 1, errno: 0
      Output from before failure:
      Running bootstrap
      Registering service 'mariadb19630'
      2024-06-19 14:41:48 0 [Note] Starting MariaDB 10.11.9-MariaDB-debug source revision 34813c1aa07f1f4a670c5749dab725993716bfe9 as process 18616
      2024-06-19 14:41:49 0 [Note] InnoDB: The first data file './ibdata1' did not exist. A new tablespace will be created!
      2024-06-19 14:41:49 0 [Note] InnoDB: !!!!!!!! UNIV_DEBUG switched on !!!!!!!!!
      2024-06-19 14:41:49 0 [Note] InnoDB: Compressed tables use zlib 1.3.1
      2024-06-19 14:41:49 0 [Note] InnoDB: Number of transaction pools: 1
      2024-06-19 14:41:49 0 [Note] InnoDB: Using crc32 + pclmulqdq instructions
      2024-06-19 14:41:49 0 [Note] InnoDB: Initializing buffer pool, total size = 20.000MiB, chunk size = 1.000MiB
      2024-06-19 14:41:49 0 [Note] InnoDB: Completed initialization of buffer pool
      2024-06-19 14:41:49 0 [Note] InnoDB: Setting file './ibdata1' size to 12.000MiB. Physically writing the file full; Please wait ...
      2024-06-19 14:41:49 0 [Note] InnoDB: File './ibdata1' size is now 12.000MiB.
      2024-06-19 14:41:49 0 [Note] InnoDB: File system buffers for log disabled (block size=512 bytes)
      2024-06-19 14:41:49 0 [Note] InnoDB: Doublewrite buffer not found: creating new
      2024-06-19 14:41:49 0 [Note] InnoDB: 128 rollback segments are active.
      2024-06-19 14:41:49 0 [Note] InnoDB: Setting file './ibtmp1' size to 12.000MiB. Physically writing the file full; Please wait ...
      2024-06-19 14:41:49 0 [Note] InnoDB: File './ibtmp1' size is now 12.000MiB.
      2024-06-19 14:41:49 0 [Note] InnoDB: log sequence number 0; transaction id 3
      2024-06-19 14:41:49 0 [Note] Plugin 'FEEDBACK' is disabled.
      2024-06-19 14:41:49 0 [Note] mysqld.exe: SSPI: using principal name 'localhost', mech 'Negotiate'
      2024-06-19 14:41:49 1 [Warning] Could not remove temporary table: 'C:\Buildbot\amd64-windows\build\tmpdir\#sql-temptable-48b8-1-7', error: 2
      ASorry, we probably made a mistake, and this is a bug.
      Your assistance in bug reporting will enable us to fix this for the next release.
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
      Server version: 10.11.9-MariaDB-debug source revision: 34813c1aa07f1f4a670c5749dab725993716bfe9
      key_buffer_size=134217728
      read_buffer_size=131072
      max_used_connections=0
      max_threads=65537
      thread_count=1
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 142742990 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
      Thread pointer: 0x25a33eedcf8
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      server.dll!my_sigabrt_handler()[my_thr_init.c:467]
      ucrtbase.dll!raise()
      ucrtbase.dll!abort()
      ucrtbase.dll!_get_wpgmptr()
      ucrtbase.dll!_wassert()
      server.dll!mysql_rm_table_no_locks()[sql_table.cc:1520]
      server.dll!mysql_rm_table()[sql_table.cc:1211]
      server.dll!mysql_execute_command()[sql_parse.cc:5030]
      server.dll!mysql_parse()[sql_parse.cc:8143]
      server.dll!bootstrap()[sql_parse.cc:1083]
      server.dll!mysqld_main()[mysqld.cc:5969]
      server.dll!mysqld_win_main()[winmain.cc:278]
      mysqld.exe!main()[main.cc:36]
      mysqld.exe!__scrt_common_main_seh()[exe_common.inl:288]
      KERNEL32.DLL!BaseThreadInitThunk()
      ntdll.dll!RtlUserThreadStart()
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x25a33f0e360): DROP TABLE tmp_user_nopasswd, tmp_user_socket, tmp_proxies_priv;
      Connection ID (thread ID): 1
      Status: NOT_KILLED
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on,not_null_range_scan=off,hash_join_cardinality=off,cset_narrowing=off
      The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mariadbd/ contains
      information that should help you find out what is causing the crash.
      Writing a core file at C:/Buildbot/amd64-windows/build/mysql-test/var/22/tmp/data
      Minidump written to C:/Buildbot/amd64-windows/build/mysql-test/var/22/tmp/data/mysqld.dmp
      Creating my.ini file
      Executing ""C:\Buildbot\amd64-windows\build\sql\Debug\mysqld.exe" --defaults-file=my.ini --console --bootstrap --datadir=. --loose-innodb-buffer-pool-size=20M"
      ERROR: Can't write to mysqld's stdin
      FATAL ERROR: database creation failed
      The result from queries just before the failure was:
      use mysql;
      # run mysql_install_db with --service parameter
       - saving 'C:/Buildbot/amd64-windows/build/mysql-test/var/22/log/main.winservice_basic/' to 'C:/Buildbot/amd64-windows/build/mysql-test/var/log/main.winservice_basic/'
      Retrying test main.winservice_basic, attempt(2/3)...
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: